[tool.poetry]
name = "doenut"
version = "0.1.1"
description = "Design Of Experiments Numerical Utility Toolkit"
authors = ["Ella Gale", "Oliver Matthews"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
doepy = "^0.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
python-semantic-release = "^8.3.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-epytext = "^0.0.4"
nbmake = "^1.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
